<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_passw">Contraseña</string>
    <string name="text_button">Login</string>
    <string name="dont_have_account">¿No tienes una cuenta?\ </string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_createaccount">Unete</string>
    <string name="toolbar_title_createaccount">Crear cuenta</string>
    <string name="username_card">Uriel Ramirez</string>
    <string name="firstword_card">Hace\ </string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Yo</string>
    <string name="search_hint">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimage_detail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec tellus risus. Etiam enim dui, pharetra vitae dapibus id, faucibus quis libero. Donec porta sem ut vehicula pretium. Fusce mollis mauris eu dolor finibus tempus. Donec tincidunt, elit eu tempus tempor, leo metus pulvinar purus, at malesuada risus quam non nisl. Donec vel malesuada risus, ut laoreet nisi. Sed interdum lorem sit amet diam dignissim molestie ut vel nisl.</string>
    <string name="transitionname_picture">transitionnamepicture</string>

</resources>
