<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gilve.platzigram.LoginActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/platzigram"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_passw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_passw"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="login"/>
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"/>

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:onClick="goCreateAccount"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
